k8s/ingress/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: services
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - tapirchess.dev
      secretName: tls-secret
  rules:
    - host: tapirchess.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 8080
